# AI-Financial-Risk-Compliance-Assistant

./: .gitattributes  .replit  README.md  package.json  pyproject.toml
.agents/memory/: MEMORY.md  auth-security.md  nextjs-route-groups.md  nextjs-version.md  port-split.md  vector-store.md
Backend/: .gitignore  main.py  requirement.txt
Backend/app/api/: auth.py  chat.py  dashboard.py  documents.py  reports.py  risk.py
Backend/app/core/: config.py  database.py  security.py
Backend/app/models/: audit.py  document.py  transaction.py  user.py
Backend/app/rag/: embedder.py  loader.py  splitter.py
Backend/app/schemas/: chat.py  document.py  risk.py  user.py
Backend/app/services/: chroma_service.py  compliance_service.py  gemini_service.py  rag_service.py
Backend/config/: database.py
Backend/models/: audit.py  chat.py  common.py  compliance.py  document.py  document_chunk.py  risk.py  transaction.py  user.py
Backend/schemas/: audit.py  auth.py  chat.py  common.py  compliance.py  document.py  document_chunk.py  risk.py  transaction.py  user.py
attached_assets/: Pasted--Build-a-complete-production-ready-frontend-for-an-AI-F_1782796995897.txt  Pasted-Build-a-complete-production-style-backend-project-using_1782796044438.txt
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/.next/dev/: lock  (+2 more)
frontend/app/: globals.css  layout.tsx
frontend/components/: navbar.tsx  sidebar.tsx
frontend/hooks/: useAuth.ts
frontend/lib/: axios.ts
frontend/store/: auth-store.ts  chat-store.ts  document-store.ts
(+188 files in other folders)
