[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "gunicorn>=26.0.0",
    "httpx==0.27.2",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "pytest==8.3.3",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart==0.0.9",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]==0.30.6",
]
